--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>John Doe - Full Stack Software Engineer</title>
+    <title>William He - Software Engineer</title>
     <meta name="description" content="Full Stack Software Engineer passionate about building scalable web applications. Currently seeking new opportunities." />
-    <meta name="author" content="John Doe" />
+    <meta name="author" content="William He" />
 
-    <meta property="og:title" content="John Doe - Full Stack Software Engineer" />
+    <meta property="og:title" content="William He - Software Engineer" />
     <meta property="og:description" content="Full Stack Software Engineer passionate about building scalable web applications. Currently seeking new opportunities." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
