--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta property="og:title" content="William He - Software Engineer" />
     <meta property="og:description" content="Full Stack Software Engineer passionate about building scalable web applications. Currently seeking new opportunities." />
     <meta property="og:type" content="website" />
+
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
   </head>
 
   <body>
